# fqxv

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  THIRD-PARTY-NOTICES.md  pixi.toml  release-plz.toml  zensical.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  fuzz.yml  release-plz.yml  release.yml  wheels.yml
bench/: .gitignore  README.md  RESULTS.md  bam_identity.sbatch  bam_identity.sh  bench.sbatch  bench_cell.sbatch  build_and_bench.sbatch  concordance.sh  corpus.sh  datasets.tsv  edgecases.sh  fetch.sh  fmt_clippy.sbatch  fqdigest.rs  longread.sbatch  longread_hifi.sbatch  longread_lossy.sbatch  merge.sbatch  pixi.toml  prep.sbatch  report.py  run_bench.sh  sample_accessions.sh  sra_compare.sh  submit_parallel.sh  test_binning.sbatch
bench/panels/: datasets.tsv  sra_panel.tsv
bench/scripts/: bam_identity.sh  build_tools.sh  cluster.sh  colord_split.sh  concordance.sh  corpus.sh  edgecases.sh  fetch.sh  report.py  run_bench.sh  sra_compare.sh  submit_parallel.sh  toolsets.sh
bench/slurm/: bam_identity.sbatch  bench.sbatch  bench_cell.sbatch  build_and_bench.sbatch  fmt_clippy.sbatch  merge.sbatch  prep.sbatch  test_binning.sbatch
bench/tools/: bamcmp.rs  fqdigest.rs  fqsim.rs
crates/fqxv/: CHANGELOG.md  Cargo.toml  README.md
crates/fqxv-bytes/: Cargo.toml  README.md
crates/fqxv-bytes/src/: lib.rs
crates/fqxv-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/fqxv-cli/src/: main.rs  output.rs  progress.rs  report.rs
crates/fqxv-cli/tests/: batch.rs  extract.rs  quality_bin.rs  stdin_stream.rs
crates/fqxv-dna/: Cargo.toml  README.md
crates/fqxv-dna/src/: lib.rs
crates/fqxv-fqzcomp/: CHANGELOG.md  Cargo.toml  README.md
crates/fqxv-fqzcomp/benches/: fqzcomp.rs
crates/fqxv-fqzcomp/examples/: ctx_probe.rs  qual.rs  qual_bench.rs
crates/fqxv-fqzcomp/src/: binmix.rs  lib.rs  mix.rs
crates/fqxv-lroverlap/: Cargo.toml  README.md
crates/fqxv-lroverlap/examples/: encode.rs  overlaps.rs  tile_sweep.rs  wfa_bench.rs
crates/fqxv-lroverlap/proptest-regressions/: minimizer.txt  tile.txt
crates/fqxv-lroverlap/src/: align.rs  anchorgap.rs  chain.rs  codec.rs  consensus.rs  index.rs  layout.rs  lib.rs  minimizer.rs  overlap.rs  radix.rs  refine.rs  script.rs  tile.rs  wfa.rs
crates/fqxv-python/: Cargo.toml  README.md  pyproject.toml
crates/fqxv-python/python/fqxv/: __init__.py  remote.py
crates/fqxv-python/src/: lib.rs
crates/fqxv-python/tests/: test_remote.py  test_smoke.py
crates/fqxv-range/: CHANGELOG.md  Cargo.toml  README.md
crates/fqxv-range/src/: lib.rs
crates/fqxv-rans/: CHANGELOG.md  Cargo.toml  README.md
crates/fqxv-rans/benches/: rans.rs
crates/fqxv-rans/examples/: entropy.rs
crates/fqxv-rans/proptest-regressions/: lib.txt
crates/fqxv-rans/src/: avx2.rs  avx512.rs  lib.rs  model.rs  scalar.rs
crates/fqxv-reorder/: CHANGELOG.md  Cargo.toml  README.md
crates/fqxv-reorder/benches/: reorder.rs
crates/fqxv-reorder/examples/: bidir_ab.rs  delta.rs  gain.rs  keystats.rs
crates/fqxv-reorder/proptest-regressions/: lib.txt  reflzma.txt  refpack.txt
crates/fqxv-reorder/src/: clustered.rs  column.rs  global.rs  lib.rs  merge.rs  plan.rs  reflzma.rs  refpack.rs  rescue.rs
crates/fqxv-seq/: CHANGELOG.md  Cargo.toml  README.md
crates/fqxv-seq/benches/: seq.rs
crates/fqxv-seq/examples/: seq.rs
crates/fqxv-seq/src/: lib.rs  lzma.rs
crates/fqxv-tokenizer/: CHANGELOG.md  Cargo.toml  README.md
crates/fqxv-tokenizer/benches/: tokenizer.rs
crates/fqxv-tokenizer/examples/: names.rs
crates/fqxv-tokenizer/src/: lib.rs
crates/fqxv/examples/: containment_scan.rs  indel_probe.rs  lroverlap_refcodec_ab.rs  lzma_probe.rs  op_mix.rs  op_mix_global.rs  ordersweep.rs  qsweep.rs  refcodec_ab.rs  scaling.rs  stream_split.rs
crates/fqxv/src/: container.rs  crc.rs  lib.rs
crates/fqxv/src/container/: block.rs  compress.rs  decompress.rs  estimate.rs  format.rs  inspect.rs  mod.rs  parse.rs  random_access.rs  records.rs  reorder.rs  select.rs  tests.rs  verify.rs
crates/fqxv/tests/: corruption.rs
docs/: acknowledgments.md  benchmarks.md  format-comparison.md  index.md
docs/charts/: generate.py  sra.tsv  sra_generate.py  topline.tsv
docs/cli/: compress.md  decompress.md  index.md  info.md  verify.md
docs/design/: container.md  index.md  longread.md  reordering.md  testing.md
docs/getting-started/: installation.md  quickstart.md
docs/python/: index.md
docs/stylesheets/: fqxv.css
docs/tapes/: compress.tape  decompress.tape  generate.sh  help.tape  info.tape  readme.tape
examples/: README.md  remote_smoke.sh
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: container.rs  fqzcomp.rs  lroverlap.rs  rans.rs  reorder.rs  seq.rs  tokenizer.rs
