# fqxv — a Rust FASTQ archiving toolkit.
# Workspace of one-crate-per-algorithm codecs plus the `fqxv` container/CLI.
[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.95"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rnabioco/fqxv"
homepage = "https://github.com/rnabioco/fqxv"
authors = ["Jay Hesselberth <jay.hesselberth@gmail.com>"]
keywords = ["fastq", "compression", "bioinformatics", "genomics", "rans"]
categories = ["compression", "science"]

[workspace.dependencies]
# Internal crates (path + version so they can be published independently).
fqxv-bytes = { path = "crates/fqxv-bytes", version = "0.2.0" }
fqxv-rans = { path = "crates/fqxv-rans", version = "0.2.0" }
fqxv-range = { path = "crates/fqxv-range", version = "0.2.0" }
fqxv-fqzcomp = { path = "crates/fqxv-fqzcomp", version = "0.2.0" }
fqxv-tokenizer = { path = "crates/fqxv-tokenizer", version = "0.2.0" }
fqxv-seq = { path = "crates/fqxv-seq", version = "0.2.0" }
fqxv-reorder = { path = "crates/fqxv-reorder", version = "0.2.0" }
fqxv-lroverlap = { path = "crates/fqxv-lroverlap", version = "0.2.0" }
fqxv = { path = "crates/fqxv", version = "0.2.0" }

# Shared third-party deps, versions pinned once here.
rayon = "1.10"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
noodles-fastq = "0.23"
noodles-bgzf = "0.48"
memchr = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
bitstream-io = "4"
flate2 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tabled = "0.21"
indicatif = "0.18"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Python bindings (fqxv-python cdylib only). Features are selected per-crate;
# fqxv-python re-enables `macros` (a dropped default) alongside abi3/extension-module.
pyo3 = { version = "0.24", default-features = false }

# Dev/bench deps.
proptest = "1"
criterion = { version = "0.8", features = ["html_reports"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "forbid"
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
# rANS/range coders are full of intentional wrapping integer arithmetic.
cast_possible_truncation = "allow"
# Codec tables are indexed across several parallel arrays by the same position;
# index loops read clearer than zipped iterators here.
needless_range_loop = "allow"

# Optimized release build: fat LTO + single codegen unit for maximum performance.
[profile.release]
opt-level = 3
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1

# Fast dev builds, but with optimized third-party crates so tests/benches run
# at a reasonable speed.
[profile.dev.package."*"]
opt-level = 2

# `cargo bench` uses [profile.bench], which does NOT inherit [profile.release]
# by default. Pin it so microbenchmarks measure the same codegen (fat LTO,
# single codegen unit) that ships. strip=false keeps symbols for criterion.
[profile.bench]
inherits = "release"
strip = false

# Release build with symbols preserved — for samply/perf/flamegraph on
# release-speed code. Debuginfo split into a sidecar so the binary stays small.
[profile.profiling]
inherits = "release"
debug = 2
split-debuginfo = "packed"
strip = false
lto = false
codegen-units = 16

# Distribution profile used by the release workflow.
[profile.dist]
inherits = "release"
