[package]
name = "fqxv-bytes"
description = "Shared byte-serialization primitives (LEB128 varints and zig-zag) for the fqxv FASTQ toolkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dev-dependencies]
proptest.workspace = true
