[package]
name = "fqxv-cli"
description = "Command-line interface for the fqxv FASTQ archiver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "fqxv"
path = "src/main.rs"

[dependencies]
fqxv.workspace = true
clap.workspace = true
anyhow.workspace = true
