[package]
name = "fqxv-dna"
description = "Shared nucleotide primitives (2-bit ACGT coding and reverse complement) for the fqxv FASTQ toolkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dev-dependencies]
proptest.workspace = true
