[package]
name = "fqxv-python"
description = "Python bindings for the fqxv FASTQ archiver (read-only)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
# The Python extension module is distributed as a wheel, not on crates.io.
publish = false

[lib]
# The compiled extension is `fqxv._fqxv` (a private submodule); the pure-Python
# `fqxv` package in `python/` re-exports it and adds `fqxv.remote`. The crate name
# stays `fqxv-python` to avoid colliding with the `fqxv` library dependency.
name = "_fqxv"
crate-type = ["cdylib"]

[dependencies]
# The produced module (and this crate's `[lib] name`) is `fqxv`, which would
# collide with a dependency also named `fqxv`; import the library under an alias.
fqxv_core = { path = "../fqxv", version = "0.5.0", package = "fqxv" }
# `macros` (a pyo3 default we dropped at the workspace level) provides the
# #[pyclass]/#[pymethods]/#[pyfunction] attributes; abi3-py39 → one forward-
# compatible wheel per platform; extension-module keeps libpython unlinked.
pyo3 = { workspace = true, features = ["abi3-py39", "extension-module", "macros"] }
# `estimate` reads the raw FASTQ input, which is usually gzip/BGZF-compressed;
# sniff the magic and decode transparently (BGZF is gzip-framed, so MultiGzDecoder
# reads it too), mirroring the CLI's input auto-detection.
flate2 = { workspace = true }
