[package]
name = "fqxv-range"
description = "Binary range coder and adaptive frequency models for the fqxv FASTQ toolkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
