[package]
name = "fqxv-rans"
description = "rANS Nx16 entropy coder (scalar + SSE4.2 + AVX2, runtime dispatch) — a clean-room implementation of the CRAM 3.1 codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
