[package]
name = "fqxv-rans"
description = "rANS Nx16 entropy coder (scalar + SSE4.2 + AVX2, runtime dispatch) — a clean-room implementation of the CRAM 3.1 codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
# Exposes internal scalar/AVX2 entry points for the benchmark harness only.
bench = []

[dependencies]
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "rans"
harness = false
required-features = ["bench"]
