[package]
name = "fqxv-reorder"
description = "PgRC2/SPRING-style reference-free read reordering engine for short-read FASTQ"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
fqxv-bytes.workspace = true
fqxv-rans.workspace = true
fqxv-seq.workspace = true
thiserror.workspace = true
rayon.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "reorder"
harness = false
