[package]
name = "fqxv-seq"
description = "Nucleotide sequence packing (2-bit / variable-length) and order-k context modeling for the fqxv FASTQ toolkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
fqxv-range.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
