[package]
name = "fqxv-seq"
description = "Order-k adaptive context modeling of nucleotide sequences (2-bit ACGT symbols, range-coded) for the fqxv FASTQ toolkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
fqxv-bytes.workspace = true
fqxv-range.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "seq"
harness = false
